Añade más capturas

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -52,3 +52,55 @@ instalado a partir de este momento. Adicionalmente, eso significará
 que tienes permisos para instalarte cosas, sin el cual el resto del
 capítulo tampoco va a tener mucho sentido. 
 
+Pero es posible que no tengas acceso a ningún ordenador de forma
+permanente. Estos tiempos bárbaros en los que la gente tiene acceso a
+cientos de ordenadores, pero ninguno de ellos tiene teclado o acceso
+de administrador, crean esas cosas. Así que nos tendremos que
+trasladar a 
+
+## la nube.
+
+en una primera, y quizás mala, aproximación, la nube son recursos
+administrados por empresas que se pueden usar pagando sólo por el uso
+que se les da. Pero para lo que nos ocupa, son ordenadores que podemos
+usar desde cualquier navegador u ordenador y que en muchos casos se
+pueden usar de forma limitada gratis; por ejemplo, por un mes o
+siempre que el consumo de recursos no exceda una cantidad determinada.
+
+Aunque las empresas que proveen la gama completa de soluciones en la
+nube es relativamente pequeña, una de las que nos puede proporcionar
+una cierta cantidad de recursos por valor de 50$ y por un mes es
+[Azure de Microsoft](http://azure.com). No necesita ningún tipo de
+tarjeta de crédito para darse de alta en la evaluación gratuita, pero
+si estás en un centro de enseñanza es posible que tengan créditos
+gratis.
+
+También para experimentar puedes usar [Cloud9](http://c9.io]. Aunque
+es en realidad un entorno de desarrollo colaborativo, permite acceder
+a la línea de órdenes desde el navegador, lo que nos permitirá
+trabajar con ella fácilmente, aunque sea por un tiempo limitado. Te
+puedes dar de alta, eso sí con una tarjeta de crédito, y usando tu ID
+de GitHub. Una vez dado de alta, se crea un *workspace* en Python con
+el nombre que uno quiera y automáticamente, con los ficheros y demás,
+aparece abajo una terminal desde la que se puede ejecutar el REPL de
+python y alguna cosa más. Se usa 
+
+```
+sudo pip3 install bpython
+```
+
+por ejemplo, para installar el CLI con el que vamos a trabajar. 
+
+
+![usando `bpython` en Cloud9](../img/bpython-c9.io.png).
+
+El sistema de ficheros que se usa en Cloud9 es persistente, así que
+también puede ser útil para dejarlos de forma permanente; únicamente
+los ficheros con los que se trabaja son públicos. Puedes crear también
+espacios privados y compartirlos con otros usuarios, de forma que se
+puede trabajar colaborativamente sobre el mismo proyecto e incluso el
+mismo fichero. Usar Cloud9 sólo como un sitio con una CPU gratuita es
+no aprovechar todas sus posibilidades, pero también es cierto que
+introduciéndolo de esta forma se puede ir aprendiendo, poco a poco,
+todo lo que ofrece.
+
