Terminamos para irnos a comer
Con todo lo bonito que tiene escribir sobre algo: descubrir cosas,
aprender nuevas herramientas, entender mejor qué es la cosa sobre la
que se escribe.

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -104,3 +104,52 @@ no aprovechar todas sus posibilidades, pero también es cierto que
 introduciéndolo de esta forma se puede ir aprendiendo, poco a poco,
 todo lo que ofrece.
 
+En sitios como Azure, Amazon o Google Compute Engine, sí puedes crear
+máquinas virtuales completas. En Azure se pueden buscar máquinas
+virtuales que tengan alguna característica determinada, como Python +
+Linux y aparecen unas cuantas, sobre todo enfocadas a ciencia de
+datos; también se pueden instalar directamente máquinas como Ubuntu
+Server o Red Hat Enterprise Linux; cualquiera de ellos incluye Python
+como herramientas por defecto.
+
+Sin embargo, no es necesario ni siquiera instanciar una máquina
+virtual para trabajar con Python desde el navegador. Desde mayo de
+2017, Azure incluye el *Cloud Shell*, un intérprete Linux en el
+navegador que, aunque sirve esencialmente para poder crear scripts de
+Azure, también tiene un usuario Linux con el que se puede trabajar. No
+hay, sin embargo, acceso a super usuario, por lo que tenemos dos
+opciones:
+
+* Instalarlo como usuario, con lo que habrá que usar
+
+```
+pip3 install --user bpython
+```
+
+y posteriormente añadir 
+
+```
+export PATH=$PATH:~/.local/bin
+```
+
+desde el shell para que se pueda usar directamente, o bien, como se ha
+indicado en el primer capítulo, instalar `pyenv` para tener la versión
+de Python que se desee. `bpython` en esta instalación irá así:
+
+![bpython en Azure](../img/bpython-azure.png)
+
+Este *cloud shell* se desactiva y se borra a los 10 minutos de
+inactividad. Si realmente quieres conservar lo creado, o la historia,
+es mejor que uses una máquina virtual real, que tendrás que recordar
+apagar al final de cada sesión, porque todo consume y el crédito
+gratuito que se obtiene no es mucho. 
+
+Ya no tienes excusa para empezar a trabajar con `bpython` en la nube o
+donde sea. Así que vamos a ver el 
+
+## Python más funcional,
+
+en el sentido de la palabra: cómo trabajar con diferentes estructuras
+de datos siguiendo, dentro de lo posible, los preceptos de la
+programación funcional. 
+
