Corrige y sigue. Que hay que acabar hoy

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -75,7 +75,7 @@ tarjeta de crédito para darse de alta en la evaluación gratuita, pero
 si estás en un centro de enseñanza es posible que tengan créditos
 gratis.
 
-También para experimentar puedes usar [Cloud9](http://c9.io]. Aunque
+También para experimentar puedes usar [Cloud9](http://c9.io). Aunque
 es en realidad un entorno de desarrollo colaborativo, permite acceder
 a la línea de órdenes desde el navegador, lo que nos permitirá
 trabajar con ella fácilmente, aunque sea por un tiempo limitado. Te
@@ -89,7 +89,7 @@ python y alguna cosa más. Se usa
 sudo pip3 install bpython
 ```
 
-por ejemplo, para installar el CLI con el que vamos a trabajar. 
+por ejemplo, para instalar el CLI con el que vamos a trabajar. 
 
 
 ![usando `bpython` en Cloud9](../img/bpython-c9.io.png).
