Añadiendo zips y cosas

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -151,5 +151,43 @@ donde sea. Así que vamos a ver el
 
 en el sentido de la palabra: cómo trabajar con diferentes estructuras
 de datos siguiendo, dentro de lo posible, los preceptos de la
-programación funcional. 
+[programación funcional](https://docs.python.org/3/howto/functional.html). Dos
+tipos de métodos son los más usados en este área: los iteradores y
+los operadores sobre listas, incluyendo lo que se denomina *list
+comprehension*. Los primeros se dejan para más adelante, pero los
+segundos son tremendamente potentes y nos interesa usarlos aquí. Ya
+hemos visto algunos, `map` y `filter`.   
+
+A estos podemos añadir `zip`, que junto con `sorted` nos puede ayudar
+a comparar dos manos de cartas:
+
+```Python
+list(zip(sorted(['3♠','4♣','A♥']),sorted(['7♣', '7♥', '7♦'])))
+[('3♠', '7♣'), ('4♣', '7♥'), ('A♥', '7♦')]
+```
+
+`sorted` devuelve la lista ordenada, mientras que `zip` crea una tupla
+con un elemento de cada lista, devolviendo finalmente una lista de
+tuplas, tal como la que se muestra. La programación funcional se
+caracteriza por este tipo de *cadenas*: una función que recibe listas
+y emite listas, de forma que se pueden encadenar y, en su caso,
+dividir en diferentes hebras para hacerse de forma más eficiente. La
+combinación de la programación funcional y la nube ha dado lugar a la
+[programación reactiva](http://profile.es/blog/que-es-la-programacion-reactiva-una-introduccion/),
+orientada a flujos de datos y que permite crear arquitecturas software
+flexibles y escalables. Todo esto no nos preocupa ahora mismo, pero sí
+aprender este estilo de programación, que puede aprovecharse en todo
+tipo de lenguajes y situaciones. Esa orden, `zip`, está presente en
+todo tipo de languajes que incluyen características funcionales, como
+Perl6, donde se haría:
+
+```Perl6
+sort ['3♠','4♣','A♥'] Z sort ['7♣', '7♥', '7♦']
+((3♠ 7♣) (4♣ 7♥) (A♥ 7♦))
+```
+
+Perl6 se ahorra paréntesis cuando no hacen falta y convierte `zip` en
+el operador infijo `Z`, es decir operador que, tal como los operadores
+matemáticos, está en medio de los operandos, en vez de al principio
+(lo que se suele denominar, en el caso de los operadores, *prefijo*). 
 
