--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -191,3 +191,32 @@ el operador infijo `Z`, es decir operador que, tal como los operadores
 matemáticos, está en medio de los operandos, en vez de al principio
 (lo que se suele denominar, en el caso de los operadores, *prefijo*). 
 
+> *Ejercicio*: crear una serie de fracciones, desde 1/3 hasta 1/99 y
+> hallar su suma. 
+
+Otra función, que estaba por alguna razón en Python 2 pero que ha sido
+exiliada a `functools` en Python 3 es `reduce`. Reduce aplica
+repetidamente una función a los elementos de una lista o tupla, a
+partir de un valor inicial. Es decir, aplica al primer elemento y al
+valor inicial; el resultado lo aplica junto con el segundo elemento y
+así sucesivamente. Es una función recursiva, tal como la hemos visto
+antes, pero la podemos usar fácilmente de esta forma:
+
+```Python
+from functools import reduce
+def fact(n): return reduce( lambda prev,this: prev*this, range(1,n+1),1)
+```
+
+La función factorial, definida de esta forma, funciona exactamente
+igual que la que hemos definido anteriormente de forma recursiva; la
+recursión, por así decirlo, va por dentro. La función `lambda` que
+tenemos que pasar a `reduce` tiene dos argumentos: el valor anterior
+`prev` y el valor actual de lo que le hemos pasado, `this`. Vamos
+multiplicando los valores a partir del 1, que en este caso no es
+necesario, porque es el valor por omisión. `range(1,n+1)` generará un
+array `[1,..., n+1]` y todo junto una función factorial que multiplica
+un número por todos los que le preceden tal como estamos
+acostumbrados.
+
+> *Ejercicio*: Programar una función de Mandelbrot, usando números
+> complejos, de la misma forma. 
