--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -220,3 +220,22 @@ acostumbrados.
 
 > *Ejercicio*: Programar una función de Mandelbrot, usando números
 > complejos, de la misma forma. 
+
+No hace falta que el resultado final de un `reduce` sea un sólo
+número. Podemos por ejemplo ir creando una sucesión de Fibonacci,
+partiendo de un valor inicial: los dos primeros valores.
+
+```Python
+def fib(n): return reduce( lambda prev,this: prev+ [prev[-2]+prev[-1]], rang
+e(1,n+1), [1,1])
+fib(12)
+[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]
+```
+
+>*Ejercicio*: una generalización de las sucesiones de Fibonacci son
+>las
+>[sucesiones de Lucas](https://en.wikipedia.org/wiki/Generalizations_of_Fibonacci_numbers),
+>que usan números arbitrarios como los números iniciales y que también
+>multiplican los términos anteriores por números naturales. Programar
+>la función `lucas` que genere estas sucesiones, y definir la función
+>de Fibonacci como un caso particular de la misma. 
