--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -178,7 +178,7 @@ orientada a flujos de datos y que permite crear arquitecturas software
 flexibles y escalables. Todo esto no nos preocupa ahora mismo, pero sí
 aprender este estilo de programación, que puede aprovecharse en todo
 tipo de lenguajes y situaciones. Esa orden, `zip`, está presente en
-todo tipo de languajes que incluyen características funcionales, como
+todo tipo de lenguajes que incluyen características funcionales, como
 Perl6, donde se haría:
 
 ```Perl6
