Pues vamos a llamar esto el primer borrador
Porque ya es la hora de terminar el primer borrador. Vamos al lío y ya
corregimos luego.

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -239,3 +239,61 @@ fib(12)
 >multiplican los términos anteriores por números naturales. Programar
 >la función `lucas` que genere estas sucesiones, y definir la función
 >de Fibonacci como un caso particular de la misma. 
+
+Esta misma función, `reduce`, está también presente en muchos otros
+lenguajes de programación. En JavaScript, por ejemplo, es uno de los
+métodos de los arrays:
+
+```JavaScript
+[3,2,1].reduce( function(prev,este){ return este*prev; } )
+```
+
+y, como se ve, se usa la misma palabra clave, `function`, para definir
+`lambdas`, lo que en realidad se llaman `closures` o funciones
+anónimas, que para definir funciones que no lo son: simplemente se
+añade el nombre de la función previamente al paréntesis. Estos
+ejemplos de *list comprehension* son ubicuos en los lenguajes de
+programación, y Python tiene además una forma que combina `map` y
+`filter`: la versión posfijo de `for`.
+
+```Python
+[Fraction(1,n) for n in range(1,100) if n % 2]
+```
+
+Esta orden genera fracciones que tienen en el denominador todos los
+números impares hasta el 100. Los corchetes que hay alrededor son los
+que indican que se va a tratar de una lista; el primer término indica
+la función que se va a aplicar a todos los elementos de la lista,
+lista que se genera precisamente con la expresión `for n in
+range(1,100)`; el `if` al final filtra sólo los elementos que vamos a
+usar. 
+
+Incluso de esta forma se pueden generar listas más complejas, como la
+multiplicación de dos vectores:
+
+```Python
+[str(valor)+card for card in ["♠","♣","♥","♦"] 
+    for valor in ['A','J','Q','K',2,3,4,5,6,7,8,9,10]]
+```
+
+El primer `for` recorre los palos, el segundo los valores, y los dos
+juntos se unen, usando `+` para cadenas, en las cartas de la
+baraja. Usamos `str` alrededor de `valor` simplemente para ahorrarnos
+poner comillas alrededor de los números. 
+
+> *Ejercicio*: para una urbanización con 4 bloques, 3 plantas por
+> bloque, dos pisos por planta, A y B, generar todos los posibles
+> pisos que hay en la forma que se considere más conveniente.
+
+## Concluyendo
+
+Trabajar de forma funcional te permite acercarte más a los diferentes
+pasos en la ejecución de un problema, sin tener que pensar en estado,
+sino directamente como funciones que se aplican a las estructuras de
+datos que se han elegido. Python no es exactamente un lenguaje
+funcional, pero los lenguajes modernos no pueden evitar tener ciertos
+rasgos funcionales, aunque no estén en las funciones base. Alguna
+función en un módulo como `functools` completa bastante bien el
+panorama. 
+
+
