Algunas aclaraciones sobre fracciones

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -266,7 +266,15 @@ que indican que se va a tratar de una lista; el primer término indica
 la función que se va a aplicar a todos los elementos de la lista,
 lista que se genera precisamente con la expresión `for n in
 range(1,100)`; el `if` al final filtra sólo los elementos que vamos a
-usar. 
+usar. `Fraction` es una clase para trabajar con quebrados; el primer
+elemento es el numerador, el segundo es el numerador, aunque también
+se le pueden pasar valores de esta forma: `Fraction(1.3)`, que se
+convertirá automáticamente en 13/10. Con esta serie de fracciones se
+puede empezar a trabajar: hallar la suma, por ejemplo, o crear
+[las secuencias de Farey](http://nrich.maths.org/2086), que son
+secuencias de listas de fracciones. Por
+ejemplo,
+[se puede generar una aproximación al número e](https://en.wikipedia.org/wiki/Continued_fraction#A_property_of_the_golden_ratio_.CF.86). 
 
 Incluso de esta forma se pueden generar listas más complejas, como la
 multiplicación de dos vectores:
