Añadiendo más ejemplos para reduce

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -293,6 +293,69 @@ poner comillas alrededor de los números.
 > bloque, dos pisos por planta, A y B, generar todos los posibles
 > pisos que hay en la forma que se considere más conveniente.
 
+También se puede usar para almacenar valores en un `array` o
+diccionario. Por ejemplo, ¿son los valores aleatorios verdaderamente
+aleatorios? Una forma es comprobar si el último bit se reparte de
+forma equitativa entre 0 y 1, y los números (enteros) resultantes son
+con igual probabilidad pares o impares.
+
+```Python
+from random import random
+aleatorios = [int(random()*10000) for _ in range(10000)]
+def cuenta_pares( prev, this ): prev[this&1 ] += 1; return prev;
+from functools import reduce
+reduce( cuenta_pares, aleatorios, [0,0])
+```
+
+Las dos sentencias `from` importan dos funciones que necesitamos:
+`random` y `reduce`. `aleatorios` genera números aleatorios entre 0 y
+10000, usando `int` ya que `random` devuelve valores entre 0
+y 1. `cuenta_pares` es la función que vamos a usar para reducir el
+array a un solo objeto. El primer argumento sería un array. Usa el
+segundo argumento como un número, cuya paridad comprueba a base de
+hacer un `Y` por bits del último bit. Como el resultado es 0 o 1, usa
+`+=` para aumentar en 1 el valor de ese elemento de la lista. 
+
+`+=` y en general cualquier operador más `=`, es una asignación que
+incluye el mismo elemento al que se asigna, es decir `loquesea =
+loquesea OP otracosa` se escribiría `loquesea OP= otracosa`; este
+tipo de asignación + operador se suele encontrar en prácticamente
+todos los lenguajes de programación; por ejemplo, en Ruby:
+
+```Ruby
+$a = [1,2,3]⤶
+$a += [4]⤶
+[1, 2, 3, 4]
+```
+
+En Ruby, las variables usan *sigilos*, en este caso el `$`, para
+designarse. Sin embargo, muchos lenguajes usan también algunos
+operadores *posfijo*, detrás de la variable. En Perl, por ejemplo
+
+```Perl
+$matricula = 'AA'⤶
+$matricula++⤶
+print $matricula⤶
+AB
+```
+
+Este operador *postincremento* actúa, dependiendo del tipo que tenga,
+numérico o de caracteres, efectivamente incrementando el último
+carácter y convirtiendo la A en B. Sin embargo, en
+Python
+[hay solo una forma obvia de hacer las cosas](https://www.python.org/dev/peps/pep-0020/) y
+coincide con otros lenguajes, como Lua, evitando estos operadores de
+postincremento e incluso otros como el preincremento que venían
+usándose desde la época del C. Si ya hay una forma de hacerlo, usando
+`+=1`, ¿por qué complicarse buscando otra?
+
+> *Ejercicio*: Si habéis ejecutado el generador de números aleatorios
+> de arriba, habréis visto que rara vez el resultado es exactamente la
+> mitad de cada uno. ¿Cuanta desviación hay? Realizar una función que
+> contabilice la desviación del generador de números aleatorios. 
+
+
+
 ## Concluyendo
 
 Trabajar de forma funcional te permite acercarte más a los diferentes
