Añade Python en Gimp y empotrado

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -122,6 +122,31 @@ Si simplemente quieres ir probando cosas desde tu tablet o un ordenador accesibl
 
 > *Ejercicio*: regístrate en `repl.it` usando tu cuenta de Google, Facebook o GitHub. Si no estás registrado en GitHub, quizás sea un buen momento para hacerlo. 
 
+Python, de hecho, está *empotrado* en muchas aplicaciones, como un
+lenguaje que sirve para escribir *plugins* o extensiones. Es posible
+que 
+
+## Python esté en tus programas habituales.
+
+![En Gimp](../img/python-gimp.png)
+
+En Gimp, por ejemplo, se puede usar
+para
+[escribir extensiones](https://www.ibm.com/developerworks/library/os-autogimp/index.html) que
+manipulan directamente la imagen, y además el propio programa incluye
+una consola de Python, aunque de la versión 2. OpenOffice también
+permite escribir programas con él si se instala la extensión
+correspondiente,
+y
+[muchas aplicaciones de escritorio y juegos](https://wiki.python.org/moin/AppsWithPythonScripting) permiten
+hacerlo de diferente forma.
+
+Si no tienes ninguna otra cosa, ni Internet, pero sí una copia de
+Gimp, ¡tienes Python! Si tienes de todo, tener Python empotrado en las
+aplicaciones te permite diferentes campos de juego y posibilidades
+creativas. 
+
+
 ## Trabajando con un editor
 
 Aunque sea sólo por el hecho de poder llevar un pequeño diario de lo
