Corregidas algunas erratillas

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -134,7 +134,7 @@ En Gimp, por ejemplo, se puede usar
 para
 [escribir extensiones](https://www.ibm.com/developerworks/library/os-autogimp/index.html) que
 manipulan directamente la imagen, y además el propio programa incluye
-una consola de Python, aunque de la versión 2. OpenOffice también
+una consola de Python, aunque de la versión 2. LibreOffice también
 permite escribir programas con él si se instala la extensión
 correspondiente,
 y
