--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -1,12 +1,12 @@
 # Tipos de datos básicos y cómo trabajar con ellos.
 
 Para simplificar, vamos a tener dos tipos de datos básicos: números y
-letras. La cosa se puede complicar eventualmente, pero por lo pronto
+palabras. La cosa se puede complicar eventualmente, pero por lo pronto
 quedémonos ahí.
 
 Arrancamos `python` desde nuestra línea de órdenes o sitio online de
 prueba favorito, y vamos a ver cómo trabajar con estos datos. Ábrelo y
-empieza a teclear  números y palabras
+empieza a teclear números y palabras
 
 	>>> 3
 	>>> "cosas"
@@ -50,7 +50,7 @@ type(5.2)
 <class 'float'>
 ```
 
-Hay una operación que es bastante peculiar de python, la división
+Hay una operación que es bastante peculiar de Python, la división
 entera o `//`
 
 ```python
@@ -60,9 +60,9 @@ entera o `//`
 ```
 
 que, precisamente, está relacionada con ese hecho. El resultado de una
-división entera siempre será un entero, y los enteros o `Int` se
+división entera siempre será un entero, y los enteros o `int` se
 pueden usar para cosas en las que los `float` no encajan. Lo que puede
-tener su importancia en casos como este:
+tener su importancia en casos como el siguiente:
 
 ```python
 >>> type(800/20)
@@ -140,7 +140,7 @@ nativa con este tipo de números, y `Ⅴ+5` resultará en el número 10, y
 `5**Ⅴ` en 3125. Los lenguajes de programación, poco a poco, van
 empezando a usar el potencial completo de Unicode, pero algunos
 lenguajes, como Python y JavaScript (que también dará un error)
-todavía no han llegado a hacerlo.  
+todavía no han llegado a hacerlo.
 
 Afortunadamente, Python no sólo trabaja con números. También puede
 
@@ -234,12 +234,13 @@ in "3.4" + 7 : argumento no-numérico para operador binario`. No le
 gusta la cadena y no tiene reparos en decirlo, porque R es un lenguaje
 estadístico, y por tanto (casi) matemático. Perl, sin embargo, llevará
 el *tipado pato* hasta las últimas consecuencias, dando como resultado
-10.7. 
+10.4. 
 
 Lo que viene a querer decir que lenguajes diferentes van a entender
-esa expresión, forzosamente ambigua, de forma diferente. Pero siempre
-te van a dar alguna pista de por qué no han entendido dicha
-expresión. Volvamos a Python: `TypeError: must be str, not int` te
+esa expresión, forzosamente ambigua, de forma diferente. Pero si no la entienden,
+te van a dar alguna pista de por qué no lo han hecho.
+
+Volvamos a Python: `TypeError: must be str, not int` te
 dice que hay un problema con el tipo de uno de los operandos, que debe
 ser una cadena (`str`), no un entero. Como sólo hay un entero, el
 número 7, eso quiere decir que ahí es donde está el error, al menos
