--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -28,7 +28,7 @@ type(True)
 <class 'bool'>
 ```
 
-De por sí, los tipos booleanos tampoco son tan útiles. Pero sí lo son
+Por sí solos los tipos booleanos tampoco son tan útiles. Pero sí lo son
 para hacer 
 
 ## Operaciones lógicas.
@@ -182,7 +182,7 @@ Python se puede usar con cualquier tipo de dato.
 > una expresión que sea equivalente a `!=`. Probar con diferentes
 > valores que efectivamente es así. 
 
-## Dos veces no es si.
+## Dos veces no es sí.
 
 Los operadores que se sitúan entre dos operandos se llaman
 binarios. `<=`, por ejemplo, es un operador binario
@@ -310,7 +310,7 @@ y el hecho de que Python lo tenga como estructura de datos básica es
 un hecho afortunado, por lo que es la elección natural también. En
 otros lenguajes, como JavaScript, habría sido algo más complicado,
 teniendo que usar vectores y definir una serie de funciones de
-multiplicación de tales vectores al modo complejo.  
+multiplicación de tales vectores al modo complejo.
 
 La *descomposición*, por otro lado, trata de descomponer un problema
 monolítico en varios problemas más pequeños. Por ejemplo, descomponer
