Cazando gamu^W^W^W^W erratilas

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -437,7 +437,7 @@ a Internet es lo que hace falta para aprender prácticamente cualquier
 cosa, desde lenguajes a macramé. A un nivel en el que se esté
 comenzando en un lenguaje, todas tus preguntas tendrán cumplida
 respuesta, incluso si provienes de otro lenguaje de programación
-preguntando *equivalences of whatever thislenguage
+preguntando *equivalences of whatever thislanguage
 thisotherlanguage*. En muchos casos habrá también vídeos o cursos
 enteros, en ocasiones gratuitos, para aprender lo que uno desee.
 
@@ -458,14 +458,14 @@ una serie de foros llamados *subreddits* donde se pueden postear
 preguntas y un sistema más o menos similar de puntuación.
 
 Lo bueno que tienen estos sitios es precisamente esa interacción:
-puedes interaccionar con ellos, si te das de alta puedes y de hecho
+puedes interaccionar con ellos, si te das de alta puedes, y de hecho
 debes, votar a las preguntas que te ayuden, aparte de a las
 respuestas. También editarlas, y por supuesto si en alguna puedes
 ayudar, aportar soluciones. Eventualmente, puedes también preguntar si
-tienes alguna duda, no sin antes hacer lo siguiente
+tienes alguna duda, no sin antes hacer lo siguiente:
 
 1. Buscar exhaustivamente por todo Google y el propio StackOverflow
-   respuesta a esa pregunta y algunas más generales.
+   por una respuesta a esa pregunta y algunas más generales.
    
 2. Reducir al mínimo el error o el problema que tengas. No puedes
    subir 200 líneas de código y esperar que alguien se las lea. Si el
@@ -487,4 +487,4 @@ programación se van a
 renombrar
 [Cortar y pegar de StackOverflow](https://www.gitbook.com/book/tra38/essential-copying-and-pasting-from-stack-overflow/details). Lo
 cierto es que ayuda mucho desde el proceso de aprendizaje... Hasta el
-proceso de aprendizaje, que en programación nunca acaba. 
+proceso de aprendizaje, que en programación nunca acaba.
