Cazando gamu^W^W^W^W erratilas

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -32,7 +32,7 @@ no usar ni `l` ni `O` ni `I` porque seguro que habéis tenido que estar
 un momento pensando si se trata de un 0 o de un 1. El `_` es una forma
 conveniente de separar palabras en una variable, sustituyendo al
 espacio, de forma que se preferirá `es_primo` a `esPrimo`. Esta última
-convenció se suele denominar *CamelCase* y conviene evitarla [por diversas razones](https://whathecode.wordpress.com/2011/02/10/camelcase-vs-underscores-scientific-showdown/). 
+convención se suele denominar *CamelCase* y conviene evitarla [por diversas razones](https://whathecode.wordpress.com/2011/02/10/camelcase-vs-underscores-scientific-showdown/). 
 
 Las variables deben ser también descriptivas, como la siguiente:
 
@@ -56,7 +56,7 @@ convertimos a una cadena con `str` y a continuación hallamos la
 longitud de esa cadena con `len`. 
 
 Trabajando con el REPL, las variables definidas se quedan en el mismo
-hasta que salgamos y podemos usarlas en cálculos más adelante. Y,
+hasta que terminemos, y podemos usarlas en cálculos más adelante. Y,
 evidentemente, igual que las constantes que hemos venido usando, y
 como se ha visto al principio, tienen un tipo que se les asigna
 automáticamente. 
@@ -72,6 +72,7 @@ potencias_de_2=(2,4,8,16,32)
 type(potencias_de_2)
 <class 'tuple'>
 ```
+
 En el momento que se le vuelva a asignar un valor a la variable, el
 tipo cambia. En este caso se tratará de una *tupla*, que es también
 una secuencia y por tanto se le puede aplicar la función `map`
@@ -142,7 +143,7 @@ cada uno de los elementos del `range`. No demasiado bueno. Vamos a
 *sacarlo fuera del bucle*, y definirlo una sola vez:
 
 ```bash
-python -c "es_par = lambda n: str(n/2 == n//2);print('\n'.join(map(es_par, range(1000))))"
+python -c "es_par = lambda n: str(n/2 == n//2); print('\n'.join(map(es_par, range(1000))))"
 ```
 Hemos definido la función `es_par`, pero ahora nos encontramos con dos
 órdenes seguidas. Para que el intérprete lo entienda, las separamos
@@ -151,7 +152,7 @@ con punto y coma. En Python se pueden separar todas las sentencias con
 como se verá más adelante. 
 
 Ahora cabría pensar si merece realmente la pena hacer esto. Es
-ligeramente más legible, lo que *es bien* desde el punto de vista de
+ligeramente más legible, lo que *está bien* desde el punto de vista de
 Python, pero ¿ganamos algo de velocidad?
 
 Una forma de hacerlo es mediante el módulo `timeit`. Los módulos son
@@ -181,7 +182,7 @@ estilo:
 ```
 
 Podríamos, en principio, usarlo así para ver qué es más conveniente,
-si una u otra forma. Aunque a priori cabría pensar que la forma en la
+si una u otra forma. Aunque a priori cabría pensar que la forma en la que
 no se crea una función cada vez que se ejecuta un bucle es más rápida,
 ejecutando eso nos va a dar más o menos el mismo resultado, que de
 hecho es el resultado que se obtiene prácticamente para todo. En este
@@ -201,7 +202,7 @@ Y vamos a medir las dos formas:
 ```Python
 timeit(setup="map(lambda n: str( n/2 == n//2 ), range(1000))")
 0.006306399000095553
-timeit(setup="es_par = lambda n: str(n/2 == n//2);map(es_par, range(1000))")
+timeit(setup="es_par = lambda n: str(n/2 == n//2); map(es_par, range(1000))")
 0.006795324999984587
 ```
 
@@ -212,12 +213,12 @@ de la misma forma para todos los valores. Multipliquemos por 10 el
 número de elementos:
 
 ```Python
-timeit(setup="es_par = lambda n: str(n/2 == n//2);map(es_par, range(10000))")
+timeit(setup="es_par = lambda n: str(n/2 == n//2); map(es_par, range(10000))")
 0.006140023999250843
 timeit(setup="map(lambda n: str( n/2 == n//2 ), range(10000))")
 0.008905056998628424
 ```
-El panorama cambia bastante, con la segunda forma, como era de
+El panorama cambia bastante, con la primera forma, como era de
 esperar, un 25% más rápido. Al empezar a usar números más grandes, sí
 importa el número de veces que se define. Incluso podemos probar otro
 test de *paridad*
@@ -234,10 +235,10 @@ millones de veces. La optimización prematura es la madre de todos los
 vicios, y
 como
 [ahora es mejor que nunca](https://www.python.org/dev/peps/pep-0020/),
-tener una código suficientemente rápida y legible de hacer algo es
-mejor que buscar hasta el infinito y más allá otra manera de hacerlo
-que sea un 10% más rápido. Una vez más, si esta no es una
-función crítica donde el sistema pasa el 90% del tiempo.
+tener código suficientemente rápido y legible es
+mejor que buscar, hasta el infinito y más allá, otra manera de hacer
+que sea un 10% más rápido. Una vez más, si ésta no es una
+función crítica donde el sistema pasa el 90% del tiempo no vale la pena optimizar.
 
 En muchos casos, la mejor forma de optimizar es simplemente plantear
 algoritmos de otra forma. Por ejemplo, usando 
@@ -283,7 +284,7 @@ encarga de llenar y posteriormente vaciar la pila. Así que vamos a
 crear una función de este tipo para averiguar si una cifra es múltiplo
 de tres lo que, recordando aritmética de primaria, resulta de sumar
 las cifras repetidamente hasta que resulta una sola, en cuyo caso será
-múltiplo de tres si esa cifra resultante es 3 o 9.
+múltiplo de tres si la cifra resultante es 3 o 9.
 
 ```Python
 suma_cifras = lambda n:  sum(map(int,list(str(n))))
@@ -294,23 +295,23 @@ Tenemos también dos formas diferentes de definir funciones. Primero,
 usando `lambda`. Para sumar las cifras tenemos que convertir primero
 el número en una cadena con `str`, luego la cadena en una lista de
 caracteres que representan cifras, pero que tendremos que volver a
-convertir en números para poder sumarlos. Una vez más uso de dos
+convertir en números para poder sumarlos. Una vez más, se hace uso de dos
 técnicas de pensamiento computacional: buscar la representación
-adecuada para los datos, y división de una operación en tres pasos (y
+adecuada para los datos, y crear la división de una operación en tres pasos (y
 eso en una sola línea). 
 
-La recursividad se usa en la siguiente, y aquí tenemos que usar la
+La recursividad se usa en la siguiente línea. Y es aquí donde tenemos que usar la
 forma tradicional de definir funciones de Python: `def`, porque con el
-uso de `lambda` no se permite y en todo caso es una forma más compacta
+uso de `lambda` no se permite recursión. En todo caso, es una forma más compacta
 de definir la función; `lambda` se usa generalmente para funciones a
 las que no se le quiere asignar un nombre, así que asignarle un nombre
 viene a ser un contrasentido; úsese sólo en caso de que sea más fácil
 de comprender que la forma alternativa o se pueda definir en una sola
 línea. Tras el nombre de la función `is_multiple_of_3` ponemos entre
 paréntesis el parámetro que vamos a usar en la misma y, como
-anteriormente, órdenes separadas por `;`. La primera halla la suma de
-las cifras, y no es estrictamente necesaria, sólo por claridad.
+anteriormente, órdenes separadas por `;`. 
 
+La primera halla la suma de las cifras.
 La segunda usa la construcción Resultado `if` cierto `else` lo que
 sea. Lo usa de forma anidada, lo que vuelve a contravenir, igual que
 la definición de la función en una sola
@@ -323,7 +324,7 @@ línea, así que se perdona esta pequeña digresión, sobre todo porque la
 recursión queda más evidente. Si tiene más de una cifra (mayor que
 10), se sigue aplicando de forma recursiva. Si no, ya podemos
 comprobar si es o no múltiplo de 3: ¿es 3 o 9? Se devuelve `True`;
-False en caso contrario. El `return` al principio de la llamada
+o `False` en caso contrario. El `return` al principio de la llamada
 recursiva es el que finalmente recoge el resultado. Al trabajar en el
 REPL habrá que pulsar ⤶ para indicar que termina ahí. 
 
@@ -390,10 +391,10 @@ públicos son gratuitos en GitHub, y crearlo es tan fácil como elegir
 una licencia, el lenguaje que se va a usar y crear un fichero
 `README.md`.
 
-Este fichero está en un lenguaje de marcas simplificado
+El fichero `README.md` está en un lenguaje de marcas simplificado
 llamado [Markdown](https://es.wikipedia.org/wiki/Markdown), como, por
 otra parte, está escrito este mismo manual. Sin necesidad de saber
-HTML y con marcas simples como `#` para un titular de primer orden o
+HTML, el lenguaje de las páginas web, y con marcas simples como `#` para un titular de primer orden o
 rodear una palabra con `**` para indicar que va a estar en cursiva, se
 pueden crear páginas con una tipografía adecuada, con inclusión de
 código, incluso tablas y algunas cosas más avanzadas, sin necesidad de
@@ -438,7 +439,7 @@ ninguna importancia en la sintaxis. En este caso.
 De la misma forma que en las listas se accede al contenido iterando
 de elemento en elemento, en este caso accederemos por la `clave` para
 cada contenido: `juego['jugador']` nos devolverá `'Johnny'`, e igual
-con el resto. 
+con el resto de elementos del diccionario.
 
 Se puede considerar un diccionario una lista en la que cada elemento
 es un par clave, valor. De hecho, [el método `items`](https://stackoverflow.com/questions/12229064/mapping-over-values-in-a-python-dictionary) de la clase te los
@@ -458,11 +459,13 @@ funciones de esta forma:
 
 ```Python
 def juega( mano ): return mano['estrategia'](mano['mano'])
+
 ```
 
 que directamente aplicaría la "estrategia" que hayamos decidido, y que
 está incluida en la estructura de datos, a la mano que cada jugador
-tenga. En este caso:
+tenga. Nota que debe haber una línea en blanco para que el intérprete
+sepa que se ha acabado la definición de la función. En este caso:
 
 ```Python
 from random import random
@@ -472,7 +475,12 @@ juego_ricky = { 'jugador'   :'Ricky',
 				
 juega(juego_ricky)
 '3♠'
+juega(juego_ricky)
+'A♥'
 ```
+
+Como hay un ``random()`` en la estrategia, la carta resultante será 
+una aleatoria de entre las que ricky tenga en su mano.
 
 > *Ejercicio*: diseñar una estructura de datos para sucesiones
 > matemáticas que contenga el nombre de la sucesión, el elemento
@@ -514,10 +522,8 @@ mano_ricky= set( ['3♠','4♣','A♥'] )
 
 En este caso hay que usar una palabra clave `set` para aclarar que se
 trata de este tipo de estructura de datos, pero también podríamos
-haber usado llaves, exactamente igual que con los diccionarios:
-
-Con estos conjuntos se puede comprobar si un elemento pertenece o no a
-él:
+haber usado llaves, exactamente igual que con los diccionarios. 
+Se puede comprobar si un elemento pertenece o no a un conjunto:
 
 ```Python
 '3♠' in mano_ricky
@@ -529,8 +535,8 @@ True
 
 Los conjuntos
 tienen
-[las operaciones típicas en ellos](https://www.learnpython.org/en/Sets),
-por ejemplo, si Ricky sospecha que Johnny se ha sacado una carta de la
+[las operaciones típicas en ellos](https://www.learnpython.org/en/Sets).
+Por ejemplo, si Ricky sospecha que Johnny se ha sacado una carta de la
 manga, hallará la intersección entre las dos:
 
 ```Python
