--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -24,7 +24,7 @@ Vamos a usarla para trabajar con
 ## `bpython`
 
 `bpython` es un intérprete alternativo de Python que permite trabajar
-con él de forma más agradable, con una serie de *goodies* como
+de forma más agradable, con una serie de *goodies* como
 sintaxis coloreada, completado automático de órdenes y variables, y
 también información interactiva. Vamos a instalarlo con
 
@@ -40,7 +40,7 @@ es algo así:
 Entre otras cosas, este *shell* nos ayuda a insertar fácilmente los
 métodos de un objeto determinado simplemente añadiendo un `.` al final
 del objeto: aparecen todos los métodos que tiene. En el
-	caso de la `baraja` que hemos mostrado en la imagen anterior, nos
+caso de la `baraja` que hemos mostrado en la imagen anterior, nos
 	mostrará una serie de métodos que podemos seleccionar pulsando el
 	tabulador; cuando seleccionamos uno y añadimos un paréntesis,
 	`bpython` nos explicará cuales son los parámetros que toma esta
@@ -156,7 +156,7 @@ tipos de métodos son los más usados en este área: los iteradores y
 los operadores sobre listas, incluyendo lo que se denomina *list
 comprehension*. Los primeros se dejan para más adelante, pero los
 segundos son tremendamente potentes y nos interesa usarlos aquí. Ya
-hemos visto algunos, `map` y `filter`.   
+hemos visto algunos, `map` y `filter`.
 
 A estos podemos añadir `zip`, que junto con `sorted` nos puede ayudar
 a comparar dos manos de cartas:
@@ -311,7 +311,7 @@ Las dos sentencias `from` importan dos funciones que necesitamos:
 `random` y `reduce`. `aleatorios` genera números aleatorios entre 0 y
 10000, usando `int` ya que `random` devuelve valores entre 0
 y 1. `cuenta_pares` es la función que vamos a usar para reducir el
-array a un solo objeto. El primer argumento sería un array. Usa el
+array a un solo objeto. El primer argumento sería una lista. Usa el
 segundo argumento como un número, cuya paridad comprueba a base de
 hacer un `Y` por bits del último bit. Como el resultado es 0 o 1, usa
 `+=` para aumentar en 1 el valor de ese elemento de la lista. 
