--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -326,8 +326,8 @@ los dos primeros, pero sí para el tercero, 2 == 5/5 + 5/5. ¿Y cómo
 haríamos 5? Teniendo en cuenta que cualquier cosa multiplicada por 0
 es cero... 
 
-> *Ejercicio*: usar sólo números 5 para reconstruir los números del 0
-> al 5. Si queda tiempo, hacerlo hasta el 10. 
+> *Ejercicio*: usa sólo cuatro números 5 para reconstruir los números del 0
+> al 5. Si puedes, hazlo hasta el 10. 
 
 
 El último mecanismo, el *reconocimiento de patrones*, se aleja más de
@@ -350,13 +350,13 @@ operadores que permiten trabajar con los números
 
 ## a nivel de bit.
 
-El trabajar con números en su representación binaria muchas veces es
+Trabajar con números en su representación binaria muchas veces es
 la forma más rápida de hacer ciertas pruebas; dado que, de hecho, el
 número ya está en esa representación, hacer ciertas operaciones
-aprovechándola es más rápido que hacerlo de otra forma. Por ejemplo,
-los números pasados a binario tienen un `1` como su último bit si son
-impares, `0` si son pares. Para comprobar si este último bit está
-*encendido*, se compara bit a bit con `1`
+es más rápido que hacerlo de otra forma. Por ejemplo,
+los números pasados a binario tienen un `1` como último bit si son
+impares, y `0` si son pares. Para comprobar si este último bit está
+*encendido* (o sea, es un 1), se compara bit a bit con `1`
 
 ```
 33 & 1
@@ -378,7 +378,7 @@ derecha `>>` el número de bits que le digamos.
 1776
 ```
 
-Puede ser una forma rápida de hallar potencias de 2
+Así, '<<' puede ser una forma rápida de hallar potencias de 2
 
 ```
 2 << 36
@@ -386,7 +386,8 @@ Puede ser una forma rápida de hallar potencias de 2
 ```
 
 Hay otros dos operadores que son equivalentes a *or* y *not*, `|` y
-`~`. Pero el siguiente operador es bastante interesante, `XOR`. Es un
+`~` a nivel binario. Además, el siguiente operador es bastante interesante: `XOR`. 
+Se trata de un
 operador lógico que es 1 cuando uno de los dos operandos es 1, pero no
 cuando lo son los dos, se denomina *o exclusivo* o *exclusive or*, de
 ahí `xor`. Y uno de sus usos es para hacer *flipping*, o cambiar el
@@ -400,7 +401,7 @@ de un número puede ser la siguiente:
 
 `1 << 3` correspondería al número binario `100`, es decir, 1 corrido
 tres posiciones. 32 es el número binario `10000`. `32 ^ 8` es `10000 ^
-100, es decir, cambiaría el 3º bit (empezando por izquierda o derecha,
+100`, es decir, cambiaría el tercer bit (empezando por izquierda o derecha,
 da igual), que convertiría el número en el 40 que vemos. 
 
 En otros lenguajes, como [Lua](http://lua.org), se usan exactamente
@@ -416,7 +417,7 @@ ejemplo, en Lua hallaríamos la media de 8 y 15 de esta forma:
 
 que, casualmente es exactamente la misma forma en la que lo haríamos
 en Python. El truco aquí es simplemente darse cuenta de que `>> 1` es
-como una división entera por dos. En realidad no funciona si alguno de
+como una división entera por dos. Esto no funciona si alguno de
 los números es impar, pero si se trabaja sólo con enteros sería una
 forma muy rápida, ya que se hace directamente en el procesador usando
 instrucciones del mismo, de realizar esta operación. 
