--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -28,7 +28,8 @@ cualquier otro, número o cadena, y se pueden definir usando `lambda`.
 Esta función va a usar `dato` para referirse a los valores que se le
 van a pasar a la función; tras los `:` especifica la operación que va
 a realizar sobre el mismo, que es a la vez el valor que va a
-devolver. En este caso, multiplicarlo por sí mismo y devolver el valor. Los primeros
+devolver. En este caso, multiplicará el valor por sí mismo y devolverá el 
+resultado, o sea, el cuadrado del valor. Los primeros
 paréntesis, que, recordemos, sirven para agrupar operaciones, definen
 esta operación sin nombre; los segundos paréntesis sirven para definir
 el valor que se le va a pasar a la función definida. Esta función es
@@ -36,7 +37,7 @@ el valor que se le va a pasar a la función definida. Esta función es
 valor, aunque podrían ser varios, y devuelve otro valor. No tiene
 *efectos secundarios*: no cambia nada en el exterior, ni siquiera el
 valor de las variables sobre las que trabaja. Recibe una copia de los
-valores con los que se les llama, en lo que se denomina *paso por
+valores con los que la función es llamada, en lo que se denomina *paso por
 valor*, y devuelve otro valor. Simple y elegante. 
 
 A los lenguajes que tienen, aparte de la posibilidad de definir
@@ -87,8 +88,8 @@ elementos, `(str zipi " " zape)`. Este último define en sí la función
 que se va aplicar a `zipi` y `zape`, que son simplemente *ranuras* o
 *marcadores* que van a ser rellenos por lo que se le pase a la
 función. Pero estos tres elementos, rodeados por paréntesis, son a su
-vez el primer elemento de otra tupla que incluye como 2º y 3º
-elemento `"þor"` y `"es poderoso"`. El intérprete de Clojure tomará
+vez el primer elemento de otra tupla que incluye como segundo y tercer
+elementos `"þor"` y `"es poderoso"`. El intérprete de Clojure tomará
 esos dos elementos que se insertarán en los *marcadores* `zipi` y
 `zape` y devolverá el resultado en la siguiente línea, como se ve.
 
@@ -184,7 +185,7 @@ números complejos como dato base):
 
 El `'` al principio hace que la lista no se evalúe, porque toda lista,
 siempre, se evalúa en Clojure. Y, como se ha indicado, esa lista no se puede modificar, como
-las tuplas de Python, sólo se le puede evaluar o pasar a una función
+las tuplas de Python, sólo puede ser evaluada o pasada a una función
 para que genere una nueva lista. 
 
 En los dos lenguajes y en los dos casos indicados, las listas pueden
@@ -273,8 +274,7 @@ list(map(len,['●●●', '●●●●●●●●●●●●●●●', '●
 Que devolverá, de una forma retorcida, los número que había en la
 lista original, tras medir el número de círculos en la cadena que es,
 efectivamente, el mismo. Obsérvese que el primer argumento de map es
-siempre una función. No le estamos pasando más que el nombre de la
-función. Map llamará a esa función una vez por cada elemento de la
+siempre una función. Map llamará a esa función una vez por cada elemento de la
 lista. 
 
 `len` es una de las
@@ -288,11 +288,11 @@ decir que es mejor meter funciones que no sean relativamente comunes
 en espacios de nombres o módulos específicos, y dejar el espacio de
 nombre "nulo", o el de funciones siempre disponibles, que no necesitan
 prefijo, limpio con unas 70 funciones, muchas de las cuales son para
-construir objetos y hemos visto ya, como `list`, `map` o `filter`.  
+construir objetos y hemos visto ya, como `list`, `map` o `filter`.
 
 
 > *Ejercicio*: "Representar" de forma gráfica (usando caracteres) el
-> logaritmo de las 20 primeras potencias de dos. 
+> logaritmo de las 20 primeras potencias de dos.
 
 [Haskell](http://haskell.org), que es un lenguaje funcional,
 permite aplicar también estos `maps` con una sintaxis relativamente
@@ -363,7 +363,4 @@ puedes tener como referencia a si quieres saber cómo se hace cualquier
 otra cosa. Los dos shells son muy potentes, y permiten crear programas
 potentes y expresivos. Conocerlos bien es un gran complemento al uso
 de cualquier lenguaje de programación.
-
-
-
 
